tests/baselines/reference/constraints0.errors.txt
tests/cases/compiler/constraints0.ts(14,11): error TS2737: Property 'a' is missing in type 'B' but present in type 'A'.


==== tests/cases/compiler/constraints0.ts (1 errors) ====
    interface A {
    	a: number;
    }
    
    interface B {
    	b: string;
    }
    
    interface C<T extends A> {
        x: T;
    }
    
    var v1: C<A>; // should work
    var v2: C<B>; // should not work
              ~
!!! error TS2737: Property 'a' is missing in type 'B' but present in type 'A'.
!!! related TS2728 tests/cases/compiler/constraints0.ts:2:2: 'a' is declared here.
    
    var y = v1.x.a; // 'a' should be of type 'number'